--- a/experiance.html
+++ b/experiance.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experiance</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My portfolio</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div>
-        <a href="index.html">HOME </a> | <a href="experiance.html">EXPERIANCE</a> | <a href="contact.html">CONTACT</a>
+  <header>
+    <div class="logo"><a href="https://cpe.eng.cmu.ac.th/lecturer-viewthai.php?view_id=Dome"> JARN DOME</a>
+  </div>
+  <div class="navbar"><a href="index.html">HOME</a> <a href="experiance.html">EXPERIANCE <a href="contact.html">CONTACT</a> 
+  </div></a>
+  </header>
+  <section>
+    <div class="con">
+      <div class="Profile">
+        <div class="Myphoto"> <img src="images/IMG_1199.JPG" alt="" ></div>
+    </div>
+      <div class="info">
+      <h1>My Experiance</h1>
+      <ul>
+        <li>I love to see 🎞️, listen to 🎵, read some 📚 in free time</li> 
+        <li>I once connected a refrigerator circuit and something like this happened.</li>
+      </ul>
+      <div>
+        <div class="HAHAHA">
+            <img src="/images/IMG_2766.jpg" alt="">
+        </div>
       </div>
-    <h1>My Experiance</h1>
+      </div>
+    </div>
+  </div>
+  </section>
+  <footer></footer>
 </body>
 </html>
