--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-  </head>
-  <body> 
-    <div>
-      <a href="index.html">HOME </a> | <a href="experiance.html">EXPERIANCE</a> | <a href="contact.html">CONTACT</a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My portfolio</title>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+  <header>
+    <div class="logo"><a href="https://cpe.eng.cmu.ac.th/lecturer-viewthai.php?view_id=Dome"> JARN DOME</a>
+  </div>
+  <div class="navbar"><a href="index.html">HOME</a> <a href="experiance.html">EXPERIANCE <a href="contact.html">CONTACT</a> 
+  </div></a>
+  </header>
+  <section>
+    <div class="con">
+      <div class="Profile">
+        <div class="Myphoto"> <img src="images/IMG_1205.JPG" alt="" ></div>
     </div>
-    <div class="contain">
-      <div>
-        <h1  style="color: rgb(233, 245, 69);">My <br>Portfolio</h1>
+      <div class="info">
+      <h1>Who am I</h1>
+      <p>&nbsp;Hi my name is Win. I graduated from Paiwitthayakarnn school. Nice to meet you!</p>
+      <h1>Skills</h1>
+      <ul>
+        <li>I have experience coding C++</li> 
+        <li>I have experiance Digital Circuit</li> 
+      </ul>
       </div>
-    <div class="info">
-      <img src="images/IMG_1212.JPG" width="480px" alt="รูปภาพ1" srcset="">
-      <p style="color: blanchedalmond;">
-        This is me when I was at school.
-      </p>
-    </div>  
-      <div>
-        <img src="./images/205671c2-ec6b-4151-a151-aa12fb25af6f.jpg" width="100px" alt="">
-      </div>
-  
     </div>
-
-    
-
-  </body>
+    <div class="Photo">
+      <div class="ExperiancePhoto">
+      <img src="./images/205671c2-ec6b-4151-a151-aa12fb25af6f.jpg" height="100px" class="experiancephoto" alt="">
+    </div>
+  </div>
+  </section>
+  <footer></footer>
+</body>
 </html>
