--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My portfolio</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div>
-        <a href="index.html">HOME </a> | <a href="experiance.html">EXPERIANCE</a> | <a href="contact.html">CONTACT</a>
+  <header>
+    <div class="logo"><a href="https://cpe.eng.cmu.ac.th/lecturer-viewthai.php?view_id=Dome"> JARN DOME</a>
+  </div>
+  <div class="navbar"><a href="index.html">HOME</a> <a href="experiance.html">EXPERIANCE <a href="contact.html">CONTACT</a> 
+  </div></a>
+  </header>
+  <section>
+    <div class="con">
+      <div class="Profile">
+        <div class="Myphoto"> <img src="images/IMG_1212.JPG" alt="" ></div>
+    </div>
+      <div class="info">
+      <h1>Contact me</h1>
+      <ul>
+        <li> chanachai_chamnanmo@cmu.ac.th</a> </li> 
+        <li>Facebook:Chanachai Chamnanmor </li>
+        <li>Line id:winza007k</li>
+      </ul>
       </div>
-    <h1>My Contact</h1>
+    </div>
+  </div>
+<div class="contact">
+    <div class="Facebook">
+        <a href="https://www.facebook.com/profile.php?id=100079588014761"><img src="/images/download.png" alt="">Contact me here!</a>
+    </div>  
+    <div class="MSteam">
+        <a href="https://teams.microsoft.com/l/chat/0/0?users=chanachai_chamnanmo@cmu.ac.th&message=Hello%2C%20this%20is%20a%20test%20message."><img src="/images/download.jpg" alt="">Chat Microsoft Teams</a>
+    </div>
+</div>
+    
+  </section>
+  <footer></footer>
 </body>
 </html>
