--- a/experiance.html
+++ b/experiance.html
@@ -26,7 +26,7 @@
       </ul>
       <div>
         <div class="HAHAHA">
-            <img src="/images/IMG_2766.jpg" alt="">
+            <img src="./images/IMG_2766.jpg" alt="">
         </div>
       </div>
       </div>
